# src/databases/models/users.ts
@@ -2,7 +2,7 @@
 /* eslint-disable require-jsdoc */
 import { Model, DataTypes, Optional } from "sequelize";
 import sequelizeConnection from "../config/db.config";
-import bcrypt from "bcrypt";
+import { hashPassword } from "../../helpers";
 export interface UsersAttributes {
   id: number;
   firstName?: string;
@@ -23,8 +23,8 @@ export interface UsersAttributes {
   createdAt?: Date;
   updatedAt?: Date;
 }
-export interface UsersCreationAttributes
-  extends Optional<UsersAttributes, "id"> {}
+
+export interface UsersCreationAttributes extends Optional<UsersAttributes, "id"> {}
 
 class Users
   extends Model<UsersAttributes, UsersCreationAttributes>
@@ -50,100 +50,101 @@ class Users
   declare updatedAt?: Date;
 
     static associate(models: any) {
-        Users.hasOne(models.Sessions, { foreignKey: "userId",as: "session" });
+        Users.hasOne(models.Session, { foreignKey: "userId", as: "session" });
+        Users.hasMany(models.Collection, { foreignKey: "sellerId", as: "collections" });
+        Users.hasMany(models.Products, { foreignKey: "sellerId", as: "products" });
     }
 }
 
 Users.init(
-  {
-    id: {
-      type: DataTypes.INTEGER,
-      autoIncrement: true,
-      primaryKey: true
+    {
+        id: {
+            type: DataTypes.UUID,
+            defaultValue: DataTypes.UUIDV4,
+            primaryKey: true
+        },
+        firstName: {
+            type: DataTypes.STRING(128),
+            allowNull: true
+        },
+        lastName: {
+            type: DataTypes.STRING(128),
+            allowNull: true
+        },
+        email: {
+            type: DataTypes.STRING(128),
+            allowNull: false,
+            unique: true,
+            validate: {
+                isEmail: true
+            }
+        },
+        password: {
+            type: DataTypes.STRING(128),
+            allowNull: false
+        },
+        phone: {
+            type: DataTypes.BIGINT,
+            allowNull: true
+        },
+        profilePicture: {
+            type: DataTypes.STRING(128),
+            allowNull: true,
+            defaultValue: "https://upload.wikimedia.org/wikipedia/commons/5/59/User-avatar.svg"
+        },
+        gender: {
+            type: DataTypes.ENUM("male", "female"),
+            allowNull: true
+        },
+        birthDate: {
+            type: DataTypes.DATE,
+            allowNull: true
+        },
+        language: {
+            type: DataTypes.STRING(128),
+            allowNull: true
+        },
+        currency: {
+            type: DataTypes.STRING(128),
+            allowNull: true
+        },
+        role: {
+            type: DataTypes.STRING(128),
+            allowNull: true
+        },
+        isVerified: {
+            type: DataTypes.BOOLEAN,
+            allowNull: true,
+            defaultValue: false
+        },
+        isGoogleAccount: {
+          type: new DataTypes.BOOLEAN(),
+          allowNull: true,
+          defaultValue: false
+        },
+        is2FAEnabled: {
+            type: DataTypes.BOOLEAN,
+            allowNull: true,
+            defaultValue: false
+        },
+        status: {
+            type: DataTypes.STRING(128),
+            allowNull: true,
+            defaultValue: "enabled"
+        },
+        createdAt: {
+            field: "createdAt",
+            type: DataTypes.DATE,
+            allowNull: false,
+            defaultValue: DataTypes.NOW
+        },
+        updatedAt: {
+            field: "updatedAt",
+            type: DataTypes.DATE,
+            allowNull: false,
+            defaultValue: DataTypes.NOW
+        }
     },
-    firstName: {
-      type: new DataTypes.STRING(128),
-      allowNull: true
-    },
-    lastName: {
-      type: new DataTypes.STRING(128),
-      allowNull: true
-    },
-    email: {
-      type: new DataTypes.STRING(128),
-      allowNull: false,
-      unique: true,
-      validate: {
-        isEmail: true
-      }
-    },
-    password: {
-      type: new DataTypes.STRING(255),
-      allowNull: false
-    },
-    phone: {
-      type: new DataTypes.BIGINT(),
-      allowNull: true
-    },
-    profilePicture: {
-      type: new DataTypes.STRING(128),
-      allowNull: true,
-      defaultValue:
-        "https://upload.wikimedia.org/wikipedia/commons/5/59/User-avatar.svg"
-    },
-    gender: {
-      type: new DataTypes.ENUM("male", "female"),
-      allowNull: true
-    },
-    birthDate: {
-      type: new DataTypes.DATEONLY(),
-      allowNull: true
-    },
-    language: {
-      type: new DataTypes.STRING(128),
-      allowNull: true
-    },
-    currency: {
-      type: new DataTypes.STRING(128),
-      allowNull: true
-    },
-    role: {
-      type: new DataTypes.STRING(128),
-      allowNull: true
-    },
-    isVerified: {
-      type: new DataTypes.BOOLEAN(),
-      allowNull: true,
-      defaultValue: false
-    },
-    isGoogleAccount: {
-      type: new DataTypes.BOOLEAN(),
-      allowNull: true,
-      defaultValue: false
-    },
-    is2FAEnabled: {
-      type: new DataTypes.BOOLEAN(),
-      allowNull: true,
-      defaultValue: false
-    },
-    status: {
-      type: new DataTypes.STRING(128),
-      allowNull: true,
-      defaultValue: "enabled"
-    },
-    createdAt: {
-      field: "createdAt",
-      type: DataTypes.DATE,
-      allowNull: false,
-      defaultValue: DataTypes.NOW
-    },
-    updatedAt: {
-      field: "updatedAt",
-      type: DataTypes.DATE,
-      allowNull: false,
-      defaultValue: DataTypes.NOW
-    }
-  },
   {
     sequelize: sequelizeConnection,
     tableName: "users",
@@ -152,11 +153,11 @@ Users.init(
     hooks: {
       beforeCreate: async (user) => {
         if (user.password) {
-          user.password = await bcrypt.hash(user.password, 10);
+          user.password = await hashPassword(user.password);
         }
       }
     }
   }
 );
 
-export default Users;
+export default Users
